--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-toastify": "^9.1.1",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
