--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
+    "date-fns": "^2.29.3",
     "framer-motion": "^8.0.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
